changed index and style

--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@ body{
 
 div {
     width: 200px;
-    height: 200px;
+
   }
   
   ul {
     background-color: tomato;
+
   }
   
   li {
     font-size: 56px;
     background-color: gold;
+
   }/*# sourceMappingURL=style.css.map */
+  .test{
+    margin-top: 0px;
+  }
